Fix horizontal scrollbar in TOC
It was always visible, because the section elements were too wide. The
section elements were as wide as the TOC without regarding their
indentation and the width of the expand button.

--- a/app/css/screen.css
+++ b/app/css/screen.css
@@ -113,7 +113,6 @@
     height: 100%;
     padding: 5px 0px;
     text-decoration: none;
-    width: 100%;
 }
 
 .toc-section:hover {
